# CMake_OpenGL_Study

./: CMakeLists.txt  LICENSE  main.cpp
cmake/: AddGitSubmodules.cmake  FindGLFW3.cmake
shader/: shader.glsl
src/: main.cpp
